# vox-movearound

./: .editorconfig  .gitignore  Makefile  README.md  all-governance-md-files.sh  lambda-monorepo-bundle.sh  migrate-to-src-script.sh  pyproject.toml  pytest.ini  traefik-bundle.sh  verify_migration.py
governance/: README.md  compliance-checklist.md  naming-conventions.md  tagging-strategy.md  traefik-governance.md
governance/architecture-decisions/: 001-monorepo-structure.md
infrastructure/: app.py  pyproject.toml  requirements.txt
infrastructure/stacks/: base_stack.py  lambda_stack.py  layer_stack.py  traefik_stack.py
lambdas/api_handler/: pyproject.toml  requirements.txt  setup.py
lambdas/api_handler/src/api_handler/: handler.py
lambdas/authorizer/: handler.py  pyproject.toml  requirements.txt  setup.py
lambdas/authorizer/tests/: test_handler.py
layers/common/: pyproject.toml  requirements.txt  setup.py
layers/common/python/common/: models.py
layers/common/src/common/: constants.py  utils.py
scripts/: build_layer.py  package_lambda.py  validate_tags.py
traefik/: README.md  docker-compose.yaml
traefik/config/: traefik.yaml
traefik/config/dynamic/: api-gateway.yaml  middleware.yaml  monitoring.yaml
traefik/docker/: Dockerfile
